chore(dev): add geist font

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Selfia">
-	
+	<main>
+		<h1 class="text-9xl">Selfia</h1>
+	</main>
 </Layout>	
