chore(dev): container + sections init

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Container from '../components/ui/container'
 ---
 
 <Layout title="Selfia">
 	<main>
-		<h1 class="text-9xl">Selfia</h1>
+		<Container>
+			<h1>Selfia</h1>
+		</Container>
 	</main>
 </Layout>	
