chore(dev): responsive hero

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Hero from '../components/sections/hero'
 ---
 
 <Layout title="Selfia">
-	<main class="py-24 bg-faded-white">
+	<main class="py-24 min-h-svh bg-faded-white">
 		<Container>
 			<Hero client:only="react"/>
 		</Container>
