--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from '../layouts/Layout.astro';
 import Container from '../components/ui/container'
 import Hero from '../components/sections/hero'
+import About from '../components/sections/about';
 ---
 
 <Layout title="Selfia">
 	<main class="py-24 min-h-svh bg-faded-white">
 		<Container>
 			<Hero client:only="react"/>
+			<About client:only="react"/>
 		</Container>
 	</main>
 </Layout>	
