--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,15 @@ import Layout from '../layouts/Layout.astro';
 import Container from '../components/ui/container'
 import Hero from '../components/sections/hero'
 import About from '../components/sections/about';
+import S5Iloq from '../components/sections/s5Iloq';
 ---
 
 <Layout title="Selfia">
 	<main class="py-24 min-h-svh bg-faded-white">
 		<Container>
-			<Hero client:only="react"/>
-			<About client:only="react"/>
+			<!-- <Hero client:only="react"/>
+			<About client:only="react"/> -->
+			<S5Iloq client:only="react"/>
 		</Container>
 	</main>
 </Layout>	
