--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,4 +31,14 @@ const { title } = Astro.props;
   body {
     font-family: "GeistVF", sans-serif;
   }
+
+  .bg-dots-fade {
+    background-color: rgba(245, 245, 245, 0);
+    opacity: 1;
+    background-image: radial-gradient(
+      #e9e9e9 1.6px,
+      rgba(245, 245, 245, 0) 1.6px
+    );
+    background-size: 32px 32px;
+  }
 </style>
