chore: Update S50Iloq section styling and content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import OtherSolutions from "../components/sections/other-solutions.astro";
 import Sustainable from "../components/sections/sustainable.astro";
 import About from "../components/sections/about";
 import S5Iloq from "../components/sections/s5Iloq";
+import S50Iloq from "../components/sections/s50Iloq";
 ---
 
 <Layout title="Selfia">
@@ -14,6 +15,7 @@ import S5Iloq from "../components/sections/s5Iloq";
 			<Hero client:only="react" />
 			<About />
 			<S5Iloq />
+			<S50Iloq />
 			<OtherSolutions />
 			<Sustainable />
 		</Container>
