chore(dev): navbar and shi

--- a/src/components/sections/sustainable.astro
+++ b/src/components/sections/sustainable.astro
@@ -2,7 +2,7 @@
 import SustIcons from "../other/sust-icons";
 ---
 
-<section class="py-32 grid grid-cols-12 gap-5 bg-dots-fade">
+<section id="sust" class="py-32 grid grid-cols-12 gap-5 bg-dots-fade">
   <div class="col-span-5 flex flex-col justify-between">
     <div>
       <h1 class="text-[4rem] leading-none tracking-tighter font-semibold mb-2">
