--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from "../components/navigation/navbar";
 interface Props {
   title: string;
 }
@@ -17,10 +18,14 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Navbar />
     <slot />
   </body>
 </html>
 <style is:global>
+  html {
+    scroll-behavior: smooth;
+  }
   @font-face {
     font-family: "GeistVF";
     src: url("/fonts/GeistVF.woff2") format("woff2");
