chore(dev): responsiveness aint that hard with grids

--- a/src/components/sections/sustainable.astro
+++ b/src/components/sections/sustainable.astro
@@ -2,22 +2,22 @@
 import SustIcons from "../other/sust-icons";
 ---
 
-<section id="sust" class="py-32 grid grid-cols-12 gap-5 bg-dots-fade">
-  <div class="col-span-5 flex flex-col justify-between">
+<section id="sust" class="md:py-32 grid md:grid-cols-12 gap-5 bg-dots-fade">
+  <div class="md:col-span-5 flex flex-col justify-between">
     <div>
-      <h1 class="text-[4rem] leading-none tracking-tighter font-semibold mb-2">
+      <h1 class="text-5xl md:text-[4rem] leading-none tracking-tighter font-semibold mb-2">
         Lideres en sustentabilidad
       </h1>
-      <p>
+      <p class="text-balance">
         Salvando el planeta con nuestras cerraduras que no tienen baterias de
         litio.
       </p>
     </div>
     <SustIcons />
   </div>
-  <div class="col-span-5 col-start-8">
+  <div class="md:col-span-5 md:col-start-8">
     <img src="/images/sust-1.png" class="w-full" />
-    <p class="pt-2">
+    <p class="md:pt-2 text-md md:text-base">
       Liderando el camino en sustentabilidad: ahorros anuales gracias a la
       tecnología sin baterías de iLOQ.
     </p>
