--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import S50Iloq from "../components/sections/s50Iloq";
 	<main class="py-24 min-h-svh bg-faded-white">
 		<Container>
 			<Hero client:only="react" />
-			<About />
+			<About client:only="react"/>
 			<S5Iloq />
 			<S50Iloq />
 			<OtherSolutions />
