--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,4 +48,20 @@ const { title } = Astro.props;
     );
     background-size: 32px 32px;
   }
+
+  ::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 2px;
+  -webkit-box-shadow: inset 0 0 0.5px     rgba(0,0,0,0.5); 
+  background-color: #f6f6f6;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 0 4px     rgba(0,0,0,0.5); 
+  background-color: white;
+}
 </style>
