chore: Update font size and spacing in navbar component

--- a/src/components/sections/other-solutions.astro
+++ b/src/components/sections/other-solutions.astro
@@ -13,13 +13,13 @@
 
   <div class="md:col-span-3 bg-faded-black row-span-2 rounded-lg p-6 text-white flex flex-col justify-between items-start md:mt-16">
     <div>Icons</div>
-    <p>
+    <p class="text-lg">
       Sirve tanto para hospitales, puertos, oficinas y edificios como casas.
     </p>
   </div>
 
   <div class="md:col-span-5 bg-selfia-green/30 rounded-lg">
-    <p class="px-6 py-9">
+    <p class="px-6 py-9 text-lg">
       durabilidad (pag 24) remote locations extreme weather conditions remote
       access in real time through SMS phone registration accesible y facil
       instalacion
@@ -37,8 +37,8 @@
   <div class="md:col-span-4 bg-selfia-green/30 rounded-lg"></div>
 
   <div class="md:col-span-3 bg-faded-black/5 px-6 py-9 rounded-lg">
-    <p class="text-lg font-semibold w-1/2">Logistica simplificada</p>
-    <p class="mt-4">
+    <p class="text-xl font-semibold w-1/2">Logistica simplificada</p>
+    <p class="mt-4 text-lg">
       Con un servicio de seguridad escalable, podras manejar multiples puntos de
       acceso desde una plataforma en la nube segura muy facil de usar.
     </p>
