--- a/src/components/sections/sustainable.astro
+++ b/src/components/sections/sustainable.astro
@@ -8,7 +8,7 @@ import SustIcons from "../other/sust-icons";
       <h1 class="text-5xl md:text-[4rem] leading-none tracking-tighter font-semibold mb-2">
         Lideres en sustentabilidad
       </h1>
-      <p class="text-balance">
+      <p class="text-balance md:text-lg text-lg">
         Salvando el planeta con nuestras cerraduras que no tienen baterias de
         litio.
       </p>
@@ -17,7 +17,7 @@ import SustIcons from "../other/sust-icons";
   </div>
   <div class="md:col-span-5 md:col-start-8">
     <img src="/images/sust-1.png" class="w-full" />
-    <p class="md:pt-2 text-md md:text-base">
+    <p class="md:pt-2 text-lg md:text-lg ">
       Liderando el camino en sustentabilidad: ahorros anuales gracias a la
       tecnología sin baterías de iLOQ.
     </p>
