chore(dev): contact section and some changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Sustainable from "../components/sections/sustainable.astro";
 import About from "../components/sections/about";
 import S5Iloq from "../components/sections/s5Iloq";
 import S50Iloq from "../components/sections/s50Iloq";
+import Contact from "../components/sections/contact";
 ---
 
 <Layout title="Selfia">
@@ -18,6 +19,7 @@ import S50Iloq from "../components/sections/s50Iloq";
 			<S50Iloq />
 			<OtherSolutions />
 			<Sustainable />
+			<Contact />
 		</Container>
 	</main>
 </Layout>
