Update iLOQ section to use new Solutions component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import OtherSolutions from "../components/sections/other-solutions.astro";
 import Sustainable from "../components/sections/sustainable.astro";
 import About from "../components/sections/about";
 import S5Iloq from "../components/sections/s5Iloq";
-import S50Iloq from "../components/sections/s50Iloq";
+import Solutions from "../components/sections/solutions";
 import Contact from "../components/sections/contact";
 ---
 
@@ -15,7 +15,7 @@ import Contact from "../components/sections/contact";
 		<Container>
 			<Hero client:only="react" />
 			<About client:only="react"/>
-			<S50Iloq />
+			<Solutions />
 			<S5Iloq />
 			<OtherSolutions />
 			<Sustainable />
