navbar responsive + adjustments

--- a/src/components/sections/other-solutions.astro
+++ b/src/components/sections/other-solutions.astro
@@ -21,14 +21,14 @@ import { Building, Home, Hospital } from "lucide-react";
       <a target="_blank" href="https://www.iloq.com/es/soluciones/oficinas/" aria-label="Cerraduras para oficinas"><Building className="size-8 hover:scale-125 transition-transform" /></a>
       <a target="_blank" href="https://www.iloq.com/es/soluciones/cerraduras-electronicas-hospitales/" aria-label="Cerraduras para hospitales"><Hospital className="size-8 hover:scale-125 transition-transform" /></a>
     </div>
-    <p class="text-balance">
+    <p class="text-balance mt-4 md:mt-0">
       Las cerraduras iLOQ sirven tanto para hospitales, puertos, oficinas y
       edificios, como casas o departamentos.
     </p>
   </div>
 
   <div class="md:col-span-5 bg-selfia-green/30 rounded-xl grid place-content-center">
-    <p class="px-6 py-9 text-lg text-center">
+    <p class="px-6 py-9 text-lg text-center font-medium">
       En Selfia, no solo ofrecemos seguridad fisica junto a iLOQ, sino tambien
       garantizamos seguridad en los tramites de tus clientes o hasta actividades
       recreativas.
@@ -48,7 +48,7 @@ import { Building, Home, Hospital } from "lucide-react";
   </div>
 
   <div class="md:col-span-3 bg-faded-black/5 px-6 py-9 rounded-xl grid place-content-center">
-    <p class="text-xl font-semibold">
+    <p class="text-xl font-semibold text-balance">
       Logistica simplificada en productos iLOQ
     </p>
     <p class="mt-4 text-balance">
