--- a/src/components/sections/sustainable.astro
+++ b/src/components/sections/sustainable.astro
@@ -17,7 +17,7 @@ import SustIcons from "../other/sust-icons";
   </div>
   <div class="md:col-span-5 md:col-start-8">
     <img src="/images/sust-1.png" class="w-full" />
-    <p class="md:pt-2 text-lg md:text-lg ">
+    <p class="mt-2 text-lg md:text-lg">
       Liderando el camino en sustentabilidad: ahorros anuales gracias a la
       tecnología sin baterías de iLOQ.
     </p>
