--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Contact from "../components/sections/contact";
 ---
 
 <Layout title="Selfia">
-	<main class="py-24 min-h-svh bg-faded-white">
+	<main class="min-h-svh bg-faded-white">
 		<Container>
 			<Hero client:only="react" />
 			<About client:only="react"/>
