--- a/src/components/sections/other-solutions.astro
+++ b/src/components/sections/other-solutions.astro
@@ -1,5 +1,4 @@
 ---
-import { Building, Building2, ClipboardPlus, GraduationCap, Home, Hospital, Hotel, School, Warehouse } from "lucide-react";
 ---
 
 <section class="py-32 grid md:grid-cols-12 gap-3">
@@ -9,6 +8,20 @@ import { Building, Building2, ClipboardPlus, GraduationCap, Home, Hospital, Hote
     </h1>
   </div>
 
+  
+
+  
+  <div
+    class="md:col-span-5 md:col-start-1 bg-selfia-green/30 rounded-xl grid place-content-center"
+  >
+    <p class="px-6 py-9 text-lg text-center font-medium ">
+      Nuestra línea de kioscos es 100% personalizable y está diseñada para
+      adaptarse a todo tipo de uso, aumentando la eficiencia, garantizando la
+      satisfacción del usuario y creando además una experiencia única
+      interactiva que, gracias a su atractivo y simplicidad, incrementan la
+      demanda.
+    </p>
+  </div>
   <div class="md:col-span-4">
     <img
       src="/images/other/gaming.jpg"
@@ -17,52 +30,8 @@ import { Building, Building2, ClipboardPlus, GraduationCap, Home, Hospital, Hote
     />
   </div>
 
-  <div
-    class="md:col-span-3 bg-faded-black row-span-2 rounded-xl p-6 text-white flex flex-col justify-between items-start md:mt-16"
-  >
-  <p class="text-4xl font-semibold text-balance">Entornos de uso</p>
-    <div class="flex flex-col gap-4">
-      <div class="flex items-center gap-2">
-        <Home className="size-6" />
-        <p class="">Propiedad residencial</p>
-      </div>
-      <div class="flex items-center gap-2">
-        <GraduationCap className="size-6" />
-        <p class="">Residencias de estudiantes</p>
-      </div>
-      <div class="flex items-center gap-2">
-        <School className="size-6" />
-        <p class="">Escuelas y edificios publicos</p>
-      </div>
-      <div class="flex items-center gap-2">
-        <ClipboardPlus className="size-6" />
-        <p class="">Hospitales</p>
-      </div>
-      <div class="flex items-center gap-2">
-        <Building2 className="size-6" />
-        <p class="">Oficinas</p>
-      </div>
-      <div class="flex items-center gap-2">
-        <Warehouse className="size-6 min-w-6" />
-        <p class="">Empresas de servicios y gestion de infraestructuras</p>
-      </div>
-    </div>
-  </div>
-
-  <div
-    class="md:col-span-5 bg-selfia-green/30 rounded-xl grid place-content-center"
-  >
-    <p class="px-6 py-9 text-lg text-center font-medium">
-      Nuestra línea de kioscos es 100% personalizable y está diseñada para
-      adaptarse a todo tipo de uso, aumentando la eficiencia, garantizando la
-      satisfacción del usuario y creando además una experiencia única
-      interactiva que, gracias a su atractivo y simplicidad, incrementan la
-      demanda.
-    </p>
-  </div>
-
-  <div class="md:col-span-4 md:grid place-content-center hidden">
-    <img class="p-16" src="/logos/logo-selfia-classic.png" alt="Selfia logo" />
+  <div class="md:col-span-3 md:grid place-content-center hidden">
+    <img class="" src="/logos/logo-selfia-classic.png" alt="Selfia logo" />
   </div>
 
   <div class="md:col-span-5">
